# StudentUniversity-Course-Recommender-System

./: .gitignore  CMakeLists.txt  README.md  university_courses.txt
include/: Course.h  CourseRecommender.h  Student.h  mainwindow.h  subject.h
src/: CourseDatabase.cpp  CourseRecommender.cpp  Student.cpp  mainwindow.cpp  subject.cpp
